added create board, list , card and comment functionalities

--- a/client/src/Boards/Boards.scss
+++ b/client/src/Boards/Boards.scss
@@ -29,4 +29,13 @@
             }
         }
     }
+
+    .create-board-form {
+        #boardName {
+            width: 100%;
+            border: none;
+            border-bottom: 2px solid #027bb0;
+            outline: none;
+        }
+    }
 }
