--- a/client/src/Board/Lists/Lists.scss
+++ b/client/src/Board/Lists/Lists.scss
@@ -12,6 +12,7 @@
 .add-list {
     background: rgb(0, 106, 168);
     height: fit-content;
+    min-width: 200px;
     cursor: pointer;
     p {
         color: #ffffff;
@@ -21,5 +22,22 @@
     border-radius: 3px;
     &:hover {
         background: rgb(0, 92, 145)
+    }
+
+    .list-form {
+        display: flex;
+        flex-direction: column;
+        div {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            .list-title {
+                border-radius: 3px;
+            }
+            i {
+                font-size: 20px;
+                margin-left: 10px;
+            }
+        }
     }
 }
