--- a/client/src/Board/Lists/Cards/Comments/Comments.scss
+++ b/client/src/Board/Lists/Cards/Comments/Comments.scss
@@ -1,41 +1,40 @@
 .comments-wrapper {
-    .comment {
-        background: lightgray;
-        border: 1px solid transparent;
-        border-radius: 3px
-    }
+  .comment {
+    background: #fff;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px -1px rgba(9, 45, 66, 0.25),
+      0 0 0 1px rgba(9, 45, 66, 0.08);
+  }
 
-    .add-comment {
-        background: transparent; 
-        margin-top: 10px; 
-        cursor: pointer; 
-        border: 1px solid transparent; 
-        border-radius: 3px;
-    
-        p {  
-        span {  
-            margin-left: 10px;
-        }  
-        }
-    
-        &:hover {
-        background: rgba(9, 45, 66, 0.13);
-        }
-        .comment-form {
-            display: flex;
-            flex-direction: column;
-            div {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                .comment-title {
-                    border-radius: 3px;
-                }
-                i {
-                    font-size: 20px;
-                    margin-left: 10px;
-                }
-            }
-        }
+  .add-comment {
+    background: transparent;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: 3px;
+
+    p {
+      span {
+        margin-left: 10px;
+      }
     }
+    .comment-form {
+      display: flex;
+      flex-direction: column;
+      .comment-title {
+        resize: none;
+        background-color: #fff;
+        border-color: transparent;
+        border-radius: 3px;
+        display: block;
+        min-height: 100px;
+        padding: 8px 12px;
+        text-decoration: none;
+        outline: none;
+        &:focus {
+            border: 1px solid rgb(0, 106, 168);
+        }
+      }
+    }
+  }
 }
