--- a/client/src/Board/Lists/Lists.scss
+++ b/client/src/Board/Lists/Lists.scss
@@ -1,43 +1,80 @@
 .list {
-    min-width: 200px;
-    background: #dfe3e6;
-    border: 1px solid transparent;
-    border-radius: 3px;
-    height: fit-content;
+  min-width: 200px;
+  background: #dfe3e6;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  position: relative;
+  .list-title-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     p {
-        font-weight: 500;
+      font-weight: 500;
     }
+    i {
+      font-size: 20px;
+      cursor: pointer;
+    }
+  }
+  .list-actions-wrapper {
+    position: absolute;
+    top: 40px;
+    right: -120%;
+    z-index: 1;
+    width: 300px;
+    background: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 8px 16px -4px rgba(9, 45, 66, 0.25),
+      0 0 0 1px rgba(9, 45, 66, 0.08);
+    .list-actions-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid lightgray;
+      .list-actions-heading {
+        text-align: center;
+      }
+      i {
+        cursor: pointer;
+      }
+    }
+    .list-actions {
+        p {
+            cursor: pointer;
+        }
+    }
+  }
 }
 
 .add-list {
-    background: rgb(0, 106, 168);
-    height: fit-content;
-    min-width: 200px;
-    cursor: pointer;
-    p {
-        color: #ffffff;
-    }
-    width: 200px;
-    border: 1px solid transparent;
-    border-radius: 3px;
-    &:hover {
-        background: rgb(0, 92, 145)
-    }
+  background: rgb(0, 106, 168);
+  position: absolute;
+  min-width: 200px;
+  cursor: pointer;
+  p {
+    color: #ffffff;
+  }
+  width: 200px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  &:hover {
+    background: rgb(0, 92, 145);
+  }
 
-    .list-form {
-        display: flex;
-        flex-direction: column;
-        div {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            .list-title {
-                border-radius: 3px;
-            }
-            i {
-                font-size: 20px;
-                margin-left: 10px;
-            }
-        }
+  .list-form {
+    display: flex;
+    flex-direction: column;
+    div {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .list-title {
+        border-radius: 3px;
+      }
+      i {
+        font-size: 20px;
+        margin-left: 10px;
+      }
     }
+  }
 }
