--- a/client/src/Boards/Boards.scss
+++ b/client/src/Boards/Boards.scss
@@ -1,41 +1,41 @@
 .boards-wrapper {
-    background: #f8f9f9;
-    height: 100vh;
-    .boards-list {
-        .board-container {
-            .board-item {
-                height: 100px;
-                background: rgb(0, 106, 168);;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border: 1px solid transparent;
-                border-radius: 3px;
-                p:first-child {
-                  text-transform: capitalize;
-                  color: #fff;
-                  font-size: 18px;
-                }
-                &:hover {
-                    cursor: pointer;
-                    background: #027bb0
-                }
-                &:last-child {
-                    background: gray;
-                    &:hover {
-                        background:#A9A9A9
-                    }
-                }
-            }
+  background: #f8f9f9;
+  height: 100vh;
+  .boards-list {
+    .board-container {
+      .board-item {
+        height: 100px;
+        background: rgb(0, 106, 168);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid transparent;
+        border-radius: 3px;
+        p:first-child {
+          text-transform: capitalize;
+          color: #fff;
+          font-size: 18px;
         }
+        &:hover {
+          cursor: pointer;
+          background: #027bb0;
+        }
+        &:last-child {
+          background: gray;
+          &:hover {
+            background: #a9a9a9;
+          }
+        }
+      }
     }
+  }
 
-    .create-board-form {
-        #boardName {
-            width: 100%;
-            border: none;
-            border-bottom: 2px solid #027bb0;
-            outline: none;
-        }
+  .create-board-form {
+    #boardName {
+      width: 100%;
+      border: none;
+      border-bottom: 2px solid #027bb0;
+      outline: none;
     }
+  }
 }
