--- a/client/src/Board/Lists/Cards/Comments/Comments.scss
+++ b/client/src/Board/Lists/Cards/Comments/Comments.scss
@@ -13,6 +13,7 @@
   .comment {
     span {
       @include comment;
+      display: inline-block;
     }
     .edit-comment {
       @include comment;
