--- a/client/src/Board/Lists/Lists.scss
+++ b/client/src/Board/Lists/Lists.scss
@@ -39,9 +39,9 @@
       }
     }
     .list-actions {
-        p {
-            cursor: pointer;
-        }
+      p {
+        cursor: pointer;
+      }
     }
   }
 
@@ -59,7 +59,6 @@
       &.current-list {
         pointer-events: none;
       }
-
     }
   }
 }
@@ -94,4 +93,50 @@
       }
     }
   }
+
+}
+
+.add-card {
+  background: transparent;
+  margin-top: 10px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 3px;
+
+  p {
+    span {
+      margin-left: 10px;
+    }
+  }
+
+  &:hover {
+    background: rgba(9, 45, 66, 0.13);
+  }
+  .card-form {
+    display: flex;
+    flex-direction: column;
+    div {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .card-title,
+      .card-description {
+        border-radius: 3px;
+        background: #fff;
+      }
+      i {
+        font-size: 20px;
+        margin-left: 10px;
+      }
+    }
+  }
+}
+
+
+.hovered {
+  background: gray;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  height: 40px;
+  width: 100%;
 }
